--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# 🎄 聖誕交換禮物抽獎系統 - 環境設定
+# 🎄 聖誕交換禮物抽獎應用程式 - 環境設定
 # 複製此檔案為 .env 並修改設定值
 
 # ========== 基本設定 ==========
@@ -16,7 +16,7 @@ NUXT_PUBLIC_SITE_ICON_RIGHT="🎁"
 # 最小參與人數
 NUXT_PUBLIC_MIN_PLAYERS=2
 
-# 單機模式最大人數
+# 主持模式最大人數
 NUXT_PUBLIC_MAX_PLAYERS=100
 
 # 連線模式房間最大人數
