--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.3.0",
   "name": "lucky-draw",
   "private": true,
   "type": "module",
@@ -9,11 +9,20 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio --port 4983",
+    "db:generate": "drizzle-kit generate",
     "v-major": "npm version major",
     "v-minor": "npm version minor",
     "v-patch": "npm version patch"
   },
+  "dependencies": {
+    "better-sqlite3": "^11.10.0",
+    "drizzle-orm": "^0.38.4"
+  },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "drizzle-kit": "^0.30.6",
     "nuxt": "^4.2.2"
   }
 }
