--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "version": "0.3.0",
+  "version": "0.3.1",
   "name": "lucky-draw",
   "private": true,
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mechaserpent/lucky-draw"
+  },
+  "homepage": "https://github.com/mechaserpent/lucky-draw#readme",
+  "bugs": {
+    "url": "https://github.com/mechaserpent/lucky-draw/issues"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --host 0.0.0.0 --port 8000",
