--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.3.1",
+  "version": "0.5.0",
   "name": "lucky-draw",
   "private": true,
   "type": "module",
@@ -25,6 +25,7 @@
     "v-patch": "npm version patch"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^10.2.1",
     "better-sqlite3": "^11.10.0",
     "drizzle-orm": "^0.38.4"
   },
