feat: 重構進階設定及抽籤組件以提升模組化及用戶體驗
將進階選項切換功能替換為專用的 AdvancedSettings 組件，應用於 online.vue 和 solo.vue。
引入 RouletteAnimation 組件於抽籤階段，增強視覺反饋及互動性。
使用 ResultsList 組件更新結果顯示，令呈現更簡潔。
新增 ProgressPanel 組件以顯示抽籤進度，提升遊戲過程中的用戶反饋。
實現 PasswordModal 用於進階設定驗證，增強安全性。
清理未使用的代碼，並改進計算屬性以提升效能及可讀性。
將套件版本更新至 0.7.0。

--- a/.env.example
+++ b/.env.example
@@ -26,21 +26,35 @@ NUXT_PUBLIC_ONLINE_MAX_PLAYERS=50
 NUXT_PUBLIC_ROOM_CODE_LENGTH=6
 
 # ========== 主題色彩 ==========
-# 主色調 (聖誕紅) - 用於按鈕等
-NUXT_PUBLIC_THEME_PRIMARY="#c41e3a"
+# 主要色彩
+NUXT_PUBLIC_THEME_PRIMARY="#BF092F"        # 深紅色 - 主要按鈕
+NUXT_PUBLIC_THEME_SECONDARY="#3B9797"      # 青綠色 - 次要按鈕
+NUXT_PUBLIC_THEME_ACCENT="#62B6B7"         # 亮青色 - 強調/高亮
 
-# 次要色調 (聖誕綠)
-NUXT_PUBLIC_THEME_SECONDARY="#228b22"
+# 背景色彩
+NUXT_PUBLIC_THEME_BG_FROM="#102A43"        # 深藍色 - 漸層起始
+NUXT_PUBLIC_THEME_BG_TO="#16476A"          # 中藍色 - 漸層結束
+NUXT_PUBLIC_THEME_BG_DEEP="#132440"        # 極深藍 - 深色背景
 
-# 背景漸層起始色
-NUXT_PUBLIC_THEME_BG_FROM="#1a472a"
+# 表面色彩（半透明層次，建議使用 rgba）
+NUXT_PUBLIC_THEME_SURFACE="rgba(255,255,255,0.08)"        # 卡片基礎表面
+NUXT_PUBLIC_THEME_SURFACE_LIGHT="rgba(255,255,255,0.12)"  # 較亮表面
+NUXT_PUBLIC_THEME_SURFACE_HOVER="rgba(255,255,255,0.16)"  # 懸停效果
 
-# 背景漸層結束色
-NUXT_PUBLIC_THEME_BG_TO="#2d1f1f"
+# 文字色彩
+NUXT_PUBLIC_THEME_TEXT="#FFFFFF"                          # 主要文字
+NUXT_PUBLIC_THEME_TEXT_SECONDARY="rgba(255,255,255,0.8)"  # 次要文字
+NUXT_PUBLIC_THEME_TEXT_MUTED="rgba(255,255,255,0.5)"      # 弱化文字
+
+# 狀態色彩
+NUXT_PUBLIC_THEME_SUCCESS="#3B9797"        # 成功狀態
+NUXT_PUBLIC_THEME_WARNING="#F59E0B"        # 警告狀態
+NUXT_PUBLIC_THEME_DANGER="#BF092F"         # 危險狀態
+NUXT_PUBLIC_THEME_INFO="#62B6B7"           # 資訊狀態
 
 # ========== 功能開關 ==========
 # 是否顯示雪花動畫
 NUXT_PUBLIC_FEATURES_SNOWFLAKES=true
 
-# 是否啟用密碼保護（進階選項）
-NUXT_PUBLIC_FEATURES_PASSWORD_PROTECTION=true
+# 是否啟用密碼保護（進階選項）- 預設關閉
+NUXT_PUBLIC_FEATURES_PASSWORD_PROTECTION=false
