feat: implement SSOT architecture with isRevealed field and auto-migration
- Add isRevealed field to drawResults schema (default: false)
- Update database initialization to include is_revealed column
- Create automatic migration script for Render deployment
- Simplify client state management by removing derived UI variables
- Implement continuous state sync during animation
- Add localStorage sessionId validation and update on reconnect
- Update documentation with migration and deployment guides

BREAKING CHANGE: Clients now rely on server-authoritative isRevealed
state instead of local UI flags (isDrawing, hasDrawnCurrent, etc.)

Files changed:
- server/database/schema.ts: Add isRevealed field definition
- server/database/index.ts: Update CREATE TABLE and add migration call
- server/database/migrate.ts: New migration script (idempotent)
- server/services/roomService.ts: Set isRevealed=false on insert
- server/routes/ws.ts: Enhanced logging with isRevealed status
- app/composables/useDeviceId.ts: Add validation and sessionId update
- app/composables/useWebSocket.ts: Update sessionId on reconnect
- app/pages/online.vue: Major refactor - remove local UI state
- package.json: Add db:migrate script
- docs/DATABASE_MIGRATION.md: Complete migration guide
- docs/RENDER_DEPLOYMENT.md: Render deployment instructions

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "db:migrate": "tsx server/database/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio --port 4983",
     "db:generate": "drizzle-kit generate",
