--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.11.0",
+  "version": "0.12.0",
   "name": "lucky-draw",
   "private": true,
   "type": "module",
@@ -17,15 +17,12 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "db:migrate": "tsx server/database/migrate.ts",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio --port 4983",
-    "db:generate": "drizzle-kit generate",
-    "db:optimize": "node scripts/apply-optimizations.js",
     "perf:report": "node scripts/performance-report.js",
     "v-major": "npm version major",
     "v-minor": "npm version minor",
     "v-patch": "npm version patch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
     "prepare": "husky"
   },
   "dependencies": {
@@ -35,11 +32,14 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "drizzle-kit": "^0.30.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "nuxt": "^4.2.2",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "vitest": "^1.0.0",
+    "@vue/test-utils": "^2.3.0",
+    "jsdom": "^21.0.0",
+    "@vitejs/plugin-vue": "^4.0.0"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
