--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.12.0",
+  "version": "0.12.1",
   "name": "lucky-draw",
   "private": true,
   "type": "module",
@@ -21,8 +21,6 @@
     "v-major": "npm version major",
     "v-minor": "npm version minor",
     "v-patch": "npm version patch",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
     "prepare": "husky"
   },
   "dependencies": {
@@ -35,11 +33,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "nuxt": "^4.2.2",
-    "prettier": "^3.7.4",
-    "vitest": "^1.0.0",
-    "@vue/test-utils": "^2.3.0",
-    "jsdom": "^21.0.0",
-    "@vitejs/plugin-vue": "^4.0.0"
+    "prettier": "^3.7.4"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
